The Last Girls Standing
Added the files & template for the Last Girls Standing; linked on the archive; css taken care of

--- a/Archive.html
+++ b/Archive.html
@@ -78,10 +78,10 @@
 								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
 								<li><a href="archive-reviews/mistermagic.html">Mister Magic</li>
 								<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
-								<li><a href="">The Last Girls Standing</li>
+								<li><a href="archive-reviews/standing.html">The Last Girls Standing</li>
 								<li><a href="archive-reviews/haunting.html">She is a Haunting</li>
 								<!--Books in progress
-								<li>Podcast</li>
+								<li>The Taking of Jake Livingston</li>
 								<li>You're Not Supposed to Die Tonight</li>
 								-->
 							</ul>
