CSS for The Sacrifice and She is a Haunting
Fixed some css

--- a/archive-reviews/haunting.html
+++ b/archive-reviews/haunting.html
@@ -64,7 +64,7 @@
 
                             <section class="review">
                                 <h2 class="haunting">Review</h2>
-                                <p>INSERT REVEIW HERE!</p>
+                                <p class="haunting">INSERT REVEIW HERE!</p>
                             
                             </section>
 
