--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -64,7 +64,7 @@
 
                             <section class="review">
                                 <h2 class="sacrifice">Review</h2>
-                                <!--Write and insert review here!-->
+                                <p class="sacrifice">INSERT REVIEW HERE!</p>
                             
                             </section>
 
