What Moves the Dead
Created the files & template for What Moves the Dead; link added and connected to archive; css taken care of

Also added further clarification to the content warnings for She is a Haunting

--- a/Archive.html
+++ b/Archive.html
@@ -80,6 +80,7 @@
 								<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
 								<li><a href="archive-reviews/standing.html">The Last Girls Standing</li>
 								<li><a href="archive-reviews/haunting.html">She is a Haunting</li>
+								<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
 								<!--Books in progress
 								<li>The Taking of Jake Livingston</li>
 								<li>You're Not Supposed to Die Tonight</li>
