--- a/archive-reviews/whatmovesdead.html
+++ b/archive-reviews/whatmovesdead.html
@@ -9,7 +9,7 @@
 
 <html>
 	<head>
-		<title>She is a Haunting Review</title>
+		<title>What Moves the Dead Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -51,26 +51,26 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>She is a Haunting by Trang Thanh Tran</h1>
-							<div class="image main"><a href="https://www.goodreads.com/book/show/60784841-she-is-a-haunting?from_search=true&from_srp=true&qid=H2TCTnUxqR&rank=1"><img src="../images/haunting.jpg" alt="An image of cover for She is a Haunting. A Vietnamese teenager, Jade, takes up the entire space, from her shoulders up. Leaves are tangled in her black hair. She stares with tears rolling down her face, lips swollen with small floweres blooming out of the corners."/></a></div>
+							<h1>What Moves the Dead by T. Kingfisher</h1>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/58724626-what-moves-the-dead?ref=nav_sb_ss_1_19"><img src="../images/whatmovesdead.jpg" alt="An image of the cover for What Moves the Dead. Against a black background, a hare stands with its next twisted at an odd angle. Wrapped around is what looks like muscles in the shape of a hare, but upon closer inspection are actually a collection of mushrooms and roots."/></a></div>
 							
                             <section class="basics">
-							    <p> October 17, 2023 - October 22, 2023 </p>
+							    <p> October 23, 2023 </p>
 							    <p><img class="star" src="../images/icons8-star-48.png">3.5/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
-							    <p> YA, Horror, Gothic, Paranormal, LGBT+ </p>
+							    <p> Adult, Novella, Horror, Gothic, Mystery, Retelling </p>
                             </section>
 
                             <section class="review">
-                                <h2 class="haunting">Review</h2>
-                                <p class="haunting">INSERT REVEIW HERE!</p>
+                                <h2 class="whatmovesdead">Review</h2>
+                                <p class="whatmovesdead">INSERT REVEIW HERE!</p>
                             
                             </section>
 
                             <details class="content warning">
                                 <summary class="content warning">Content Warnings</summary>
-                                <p>Mentions or depictions of:<br>body horror, colonisation, racism, fire/fire injury, death, death of parent, vomit, car accident, insects and parasites</p>
+                                <p>Mentions or depictions of:<br>body horror, animal death, death, war, suicide, murder, fire/fire injury, parasites</p>
                             </details>
 						</div>
 					</div>
