--- a/index.html
+++ b/index.html
@@ -194,6 +194,105 @@
 										</div>
 									</a>
 								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/sacrifice.html">
+										<h2>The Sacrifice</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/assistant.html">
+										<h2>Assisstant to the Villain</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/knife.html">
+										<h2>In the Hall with the Knife</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/deliciousmonsters.html">
+										<h2>Delicious Monsters</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/mistermagic.html">
+										<h2>Mister Magic</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/chemistry.html">
+										<h2>Lessons in Chemistry</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style7">
+									<span class="image">
+										<img src="images/pic07.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/standing.html">
+										<h2>The Last Girls Standing</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style8">
+									<span class="image">
+										<img src="images/pic08.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/haunting.html">
+										<h2>She is a Haunting</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style9">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/whatmovesdead.html">
+										<h2>What Moves the Dead</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
