Hidden -- reviews & summaries that need work

--- a/Archive.html
+++ b/Archive.html
@@ -72,18 +72,24 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
-								<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
-								<li><a href="archive-reviews/assistant.html">Assistant to the Villain</li>
+								<!--Hidden until review is written
+									<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
+									<li><a href="archive-reviews/assistant.html">Assistant to the Villain</li>
+								-->
 								<li><a href="archive-reviews/knife.html">In the Hall with the Knife</li>
-								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
-								<li><a href="archive-reviews/mistermagic.html">Mister Magic</li>
-								<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
+								<!--Hidden until review is written
+									<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
+									<li><a href="archive-reviews/mistermagic.html">Mister Magic</li>
+									<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
+								-->
 								<li><a href="archive-reviews/standing.html">The Last Girls Standing</li>
-								<li><a href="archive-reviews/haunting.html">She is a Haunting</li>
-								<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
+								<!--Hidden until review is written
+									<li><a href="archive-reviews/haunting.html">She is a Haunting</li>
+									<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
+								-->
 								<!--Books in progress
-								<li>The Taking of Jake Livingston</li>
-								<li>You're Not Supposed to Die Tonight</li>
+									<li>The Taking of Jake Livingston</li>
+									<li>You're Not Supposed to Die Tonight</li>
 								-->
 							</ul>
 						</div>
