--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
 										</div>
 									</a>
 								</article>
+								
+								<!--Hidden until summary blurbs are added
+								
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -293,6 +296,7 @@
 										</div>
 									</a>
 								</article>
+								-->
 							</section>
 						</div>
 					</div>
