You're Not Supposed to Die template
Copied template from What Moves the Dead. Again, info that is still needed upon finishing the book was replaced with exclamation points

Also replaced the content warnings on Jake Livingston w/ exclamation points

--- a/archive-reviews/notsupposedtodie.html
+++ b/archive-reviews/notsupposedtodie.html
@@ -9,7 +9,7 @@
 
 <html>
 	<head>
-		<title>The Taking of Jake Livingston Review</title>
+		<title>You're Not Supposed to Die Tonight Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -51,20 +51,20 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>The Taking of Jake Livingston by !!!!!</h1>
-							<div class="image main"><a href="https://www.goodreads.com" !!!!! ><img src="../images/livingston.jpg" alt="!!!!!"/></a></div>
+							<h1>You're Not Supposed to Die Tonight by Kaylnn Bayron</h1>
+							<div class="image main"><a href="https://www.goodreads.com" !!!!!><img src="../images/notsupposedtodie.jpg" alt="" !!!!!/></a></div>
 							
                             <section class="basics">
-							    <p> October 25 - October !!!!!, 2023 </p>
-							    <p><img class="star" src="../images/icons8-star-48.png">!!!/5</p>
+							    <p> October !! - October !!, 2023 </p>
+							    <p><img class="star" src="../images/icons8-star-48.png">3.5/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
-							    <p> Audiobook </p>
+							    <p> Print </p>
 							    <p> !!!Genres!!! </p>
                             </section>
 
                             <section class="review">
-                                <h2 class="livingston">Review</h2>
-                                <p class="livingston">INSERT REVEIW HERE!</p>
+                                <h2 class="notsupposedtodie">Review</h2>
+                                <p class="notsupposedtodie">INSERT REVEIW HERE!</p>
                             
                             </section>
 
