Archive List - links
Added links to The Taking of Jake Livingston & You're Not Supposed to Die Tonight onto the archive list

--- a/Archive.html
+++ b/Archive.html
@@ -88,8 +88,8 @@
 									<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
 								-->
 								<!--Books in progress
-									<li>The Taking of Jake Livingston</li>
-									<li>You're Not Supposed to Die Tonight</li>
+									<li><a href="archive-reviews/livingston.html">The Taking of Jake Livingston</li>
+									<li><a href="archive-reviews/notsupposedtodie.html">You're Not Supposed to Die Tonight</li>
 								-->
 							</ul>
 						</div>
