You're Not Supposed to Die Tonight & minor index blurb edits
Added review, basics, goodreads link, & content warnings, & CSS

Still need take and add photo

Also started some minor edits to my blurbs on the index page that I saved & forgot to commit last night before I started on You're Not Supposed to Die Tonight

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<header>
 								<h1 class="index">Welcome to my book blog!</h1>
 								
-								<p>Here you can find all the thoughts and opinions I have about the books I've been reading. Check out my most recent reviews here on the home page or look back through the archive for older reads. Note, all of my reviews contain spoiler tags and content warnings. Happing reading!</p>
+								<p>This website started as a project in my Digital Publishing course to test my knowledge of HTML, CSS, and github software. It very quickly grew from a small profile to a full blog. Here you can find all the thoughts and opinions I have about the books I've been reading. Check out my most recent reviews here on the home page or look back through the archive for older reads. Note, all of my reviews contain spoiler tags and content warnings. Happing reading!</p>
 							</header>
 
 							<section class="tiles">
@@ -74,7 +74,7 @@
 									<a href="main-reviews/2-cemetery.html">
 										<h2>Cemetery Boys</h2>
 										<div class="content">
-											<p>In order to prove himself a real brujo, Yadriel performs a summonging ceremony in secret, but he summons the wrong ghost and bad boy Julian refuses to pass on quietly.</p>
+											<p>In order to prove himself a real brujo, Yadriel performs a summoning ceremony in secret, but he summons the wrong ghost and bad boy Julian refuses to pass on quietly.</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +85,6 @@
 									<a href="main-reviews/3-cerulean.html">
 										<h2>The House in the Cerulean Sea</h2>
 										<div class="content">
-											<!--One line too long. Change in CSS-->
 											<p>By-the-book case worker Linus Baker has been assigned to investigate a magical orphanage and determine if the children may bring about the end of the world.</p>
 										</div>
 									</a>
@@ -97,7 +96,6 @@
 									<a href="main-reviews/4-rwrb.html">
 										<h2>Red, White & Royal Blue</h2>
 										<div class="content">
-											<!--One line too long-->
 											<p>After causing an international PR nightmare, First Son Alex is forced to play nice with Prince Henry of England, but their blossoming relationship could cause problems for both of their countries.</p>
 										</div>
 									</a>
@@ -109,7 +107,7 @@
 									<a href="main-reviews/5-whispering.html">
 										<h2>Under the Whispering Door</h2>
 										<div class="content">
-											<p>When Wallace Price encounters Hugo the Ferryman, he realizes he isn't ready to pass on to the afterlife, but to truly live and enjoy life.</p>
+											<p>When Wallace Price encounters Hugo the Ferryman, he realizes he isn't ready to pass on to whatever comes next, but to truly live and enjoy life.</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +118,6 @@
 									<a href="main-reviews/6-sunbearer.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
-											<!--Too long-->
 											<p>As a Jade semidiose, not much is expected of Teo. But when he is chosen for the Sunbearer Trials, he must ensure that he and his friends don't become the next sacrifice.</p>
 										</div>
 									</a>
@@ -143,7 +140,6 @@
 									<a href="main-reviews/8-neverwoods.html">
 										<h2>Lost in the Never Woods</h2>
 										<div class="content">
-											<!--Slighlty too long-->
 											<p>Wendy Darling is still reeling from her brothers' five year disappearnce and the memories she can't recall. When more kids disappear, a mysterious boy claims she is the only one who can find them.</p>
 										</div>
 									</a>
@@ -155,7 +151,6 @@
 									<a href="main-reviews/9-girl.html">
 										<h2>The Girl Who Fell Beneath the Sea</h2>
 										<div class="content">
-											<!--Still too long.-->
 											<p>To appease the Sea God's wrath and save her brother's beloved, Mina tosses herself into the sea. But when she discovers the god under a cursed sleep, it is up to Mina to break the curse and end her people's suffering.</p>
 										</div>
 									</a>
@@ -178,7 +173,6 @@
 									<a href="main-reviews/11-hide.html">
 										<h2>Hide</h2>
 										<div class="content">
-											<!--Again mess with CSS-->
 											<p>Contestants compete in a Hide & Seek contest at an abandoned amusement park. But as the days progress, they start to question who or what is hunting them and have contestants been eliminated permanently?</p>
 										</div>
 									</a>
@@ -204,7 +198,7 @@
 									<a href="archive-reviews/sacrifice.html">
 										<h2>The Sacrifice</h2>
 										<div class="content">
-											<p>INSERT SUMMARY BLURB</p>
+											<p>A Hollywood </p>
 										</div>
 									</a>
 								</article>
