--- a/archive-reviews/livingston.html
+++ b/archive-reviews/livingston.html
@@ -51,7 +51,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>The Taking of Jake Livingston by !!!!!</h1>
+							<h1>The Taking of Jake Livingston by Ryan Douglass<h1>
 							<div class="image main"><a href="https://www.goodreads.com" !!!!! ><img src="../images/livingston.jpg" alt="!!!!!"/></a></div>
 							
                             <section class="basics">
@@ -70,7 +70,7 @@
 
                             <details class="content warning">
                                 <summary class="content warning">Content Warnings</summary>
-                                <p>!!!!!</p>
+                                <p>Mentions or depictions of:<br>!!!!!</p>
                             </details>
 						</div>
 					</div>
