--- a/Archive.html
+++ b/Archive.html
@@ -85,7 +85,7 @@
 								
 								<!--Books in progress
 									<li><a href="archive-reviews/livingston.html">The Taking of Jake Livingston</li>
-									<li></li>
+									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
 								-->
 							</ul>
 						</div>
