Not Supposed to Die -- image
Added the image and alt text for You're Not Supposed to Die Tonight

--- a/archive-reviews/notsupposedtodie.html
+++ b/archive-reviews/notsupposedtodie.html
@@ -50,7 +50,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>You're Not Supposed to Die Tonight by Kaylnn Bayron</h1>
-							<div class="image main"><a href="https://www.goodreads.com/book/show/62039227-you-re-not-supposed-to-die-tonight?ref=nav_sb_ss_1_26"><img src="../images/notsupposedtodie.jpg" alt="" !!!!!/></a></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/62039227-you-re-not-supposed-to-die-tonight?ref=nav_sb_ss_1_26"><img src="../images/notsupposedtodie.jpg" alt="An image of You're Not Supposed to Die Tonight sitting on a stone ledge and leaning against a stone pillar. The cover shows a black teenager, Charity, running away from something. In the background is an owl sitting on a leafless tree, a camp cabin, and a red sky with a bright full moon. In the background of the image is a bench and small pond surrounded by trees."/></a></div>
 							
                             <section class="basics">
 							    <p> October 24 - October 26, 2023 </p>
