--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 							</header>
 
 							<section class="tiles">
+								<!--Hiding & cycling out older blurbs as I add a row of new ones
 								<article class="style1">
 									<span class="image">
-									<!--I like the more opaque look of the original photos included in the template for the summary blurbs. I tried including the photos on the review pages, and it didn't look as good with the revealed text. Plus my photos also altered the shapes so some were longer and more rectangular while others were shorter. This way, I don't have to fix that.-->
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="main-reviews/1-inheritance.html">
@@ -89,6 +89,7 @@
 										</div>
 									</a>
 								</article>
+								-->
 								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
