--- a/archive-reviews/feed.html
+++ b/archive-reviews/feed.html
@@ -53,11 +53,11 @@
 							<div class="image main"><a href="https://www.goodreads.com/book/show/75283912-i-feed-her-to-the-beast-and-the-beast-is-me?ref=nav_sb_ss_1_11"><img src="../images/feed.jpg" alt="An image of the I Feed Her to the Beast and the Beast is Me cover. Laure's face glances out of a river a blood. Behind her is an ominous cavern and a large skull hidden behind the title."/></a></div>
 							
                             <section class="basics">
-							    <p> October 30, 2023 - October !!!, 2023 </p>
-							    <p><img class="star" src="../images/icons8-star-48.png">3/5</p>
+							    <p> October 30, 2023 - November 2, 2023 </p>
+							    <p><img class="star" src="../images/icons8-star-48.png">4.5/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
-							    <p> YA, Horror, Fantasy, Thriller, LGBT+</p>
+							    <p> YA, Horror, Fantasy, Thriller</p>
                             </section>
 
                             <section class="review">
@@ -68,7 +68,7 @@
 
                             <details class="content warning">
                                 <summary class="content warning">Content Warnings</summary>
-                                <p>Mentions or depictions of:<br>blood, death, body horror, racism, bullying, classism, abandonment, ableism, vomit</p>
+                                <p>Mentions or depictions of:<br>blood, death, body horror, racism, bullying, classism, abandonment, ableism, body-shaming, torture, ritualistic self-harm</p>
                             </details>
 						</div>
 					</div>
