Elatsoe & Usher links
Added Elatsoe & House of Usher links to archive

--- a/Archive.html
+++ b/Archive.html
@@ -86,6 +86,8 @@
 								
 								<!--Books in progress
 									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
+									<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
+									<li><a href="archive-reviews/usher.html">The Fall of the House of Usher</li>
 								-->
 							</ul>
 						</div>
