--- a/index.html
+++ b/index.html
@@ -290,6 +290,39 @@
 										</div>
 									</a>
 								</article>
+								<article class="style10">
+									<span class="image">
+										<img src="images/pic10.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/notsupposedtodie.html">
+										<h2>You're Not Supposed to Die Tonight</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style11">
+									<span class="image">
+										<img src="images/pic11.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/livingston.html">
+										<h2>The Taking of Jake Livingston</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
+								<article class="style12">
+									<span class="image">
+										<img src="images/pic12.jpg" alt="" />
+									</span>
+									<a href="archive-reviews/feed.html">
+										<h2>I Feed Her to the Beast and the Beast is Me</h2>
+										<div class="content">
+											<p>INSERT SUMMARY BLURB</p>
+										</div>
+									</a>
+								</article>
 								-->
 							</section>
 						</div>
