--- a/archive-reviews/elatsoe.html
+++ b/archive-reviews/elatsoe.html
@@ -53,8 +53,8 @@
 							<div class="image main"><a href="https://www.goodreads.com/book/show/49089632-elatsoe?ref=nav_sb_ss_1_7"><img src="../images/elatsoe.jpg" alt="An image of the cover for Elatsoe. She can be seen standing amongs a heard of giant ghost dogs that act as the cover's pattern.."/></a></div>
 							
                             <section class="basics">
-							    <p> November 4 - November ??? 2023 </p>
-							    <p><img class="star" src="../images/icons8-star-48.png">???/5</p>
+							    <p> November 4 - November 6 2023 </p>
+							    <p><img class="star" src="../images/icons8-star-48.png">4/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> YA, Fantasy, Mystery, Magical Realism, LGBT, Speculative Fiction </p>
