Never Tell, Left Him Dead, Songbirds & Snakes
Added images, files, & templates for We'll Never Tell, Find Him Where You Left Him Dead, and Ballad of Songbirds and Snakes

Still need to do CSS

--- a/Archive.html
+++ b/Archive.html
@@ -82,12 +82,16 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
 								<li><a href="archive-reviews/notsupposedtodie.html">You're Not Supposed to Die Tonight</li>
-								<!--Hidden no review <li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>-->
+							<!--Hidden no review 
+								<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
+							<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
+								-->
 								
 								<!--Books in progress
 									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
-									<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
 									<li><a href="archive-reviews/usher.html">The Fall of the House of Usher</li>
+									<li><a href="archive-reviews/nevertell.html">We'll Never Tell</li>
+										
 								-->
 							</ul>
 						</div>
