--- a/archive-reviews/lefthimdead.html
+++ b/archive-reviews/lefthimdead.html
@@ -7,7 +7,7 @@
 
 <html>
 	<head>
-		<title>We'll Never Tell Review</title>
+		<title>Find Him Where You Left Him Dead Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -49,26 +49,26 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>We'll Never Tell by Wendy Heard</h1>
-							<div class="image main"><a href="https://www.goodreads.com/book/show/62315614-we-ll-never-tell?ref=nav_sb_ss_1_16" ><img src="../images/nevertell.jpg" alt="An image of the cover for We'll Never Tell. We see four teen sholding flashlights in a valley, glancing up at a mansion agasint the backdrop of a mountain. On the cliff face are mounted signs in the style of the Hollywood sign, spelling out the title. The tagline for this book reads: The only thing stronger than friendship is fear."/></a></div>
+							<h1>Find Him Where You Left Him Dead by Kristen Simmons</h1>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/65213918-find-him-where-you-left-him-dead?ref=nav_sb_ss_1_32" ><img src="../images/lefthimdead.jpg" alt="An image of the cover for Find Where You Left Him Dead. A white house floats within a red background, framed by gnarled dead white trees and roots. The tagline reads: At dawn he'll be gone and you'll be here forever. A review of the book from Kendare Blake reads: Jumanji but Japanese-inspired and really disturbing."/></a></div>
 							
                             <section class="basics">
 							    <p> November 7 - November ??? 2023 </p>
 							    <p><img class="star" src="../images/icons8-star-48.png"> ??? /5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
-							    <p> YA, Mystery, Thriller, Horror, Contemporary, LGBT+ </p>
+							    <p> YA, Horror, Mystery/Thriller, Paranormal, Mythology, Fantasy</p>
                             </section>
 
                             <section class="review">
-                                <h2 class="nevertell">Review</h2>
-                                <p class="nevertell">INSERT REVEIW HERE!</p>
+                                <h2 class="lefthimdead">Review</h2>
+                                <p class="lefthimdead">INSERT REVEIW HERE!</p>
                             
                             </section>
 
                             <details class="content warning">
                                 <summary class="content warning">Content Warnings</summary>
-                                <p>Mentions or depictions of:<br>murder, violence, grief, medical content, death of a parent, addiction, drug use, drug abuse</p>
+                                <p>Mentions or depictions of:<br>violence, gore, child death, death, blood, body horror, forced institutionalization, ableism, fire/fire injury</p>
                             </details>
 						</div>
 					</div>
