CSS & archive for Never Tell, Left Him Dead, & Songbirds
Added CSS for We'll Never Tell, Find Him Where You Left Him Dead, & Ballad of Songbirds and Snakes

Also added all of them to the archive list, hidden in the comments until they have been finished & the reviews have been written

--- a/Archive.html
+++ b/Archive.html
@@ -84,14 +84,15 @@
 								<li><a href="archive-reviews/notsupposedtodie.html">You're Not Supposed to Die Tonight</li>
 							<!--Hidden no review 
 								<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
-							<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
+								<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
 								-->
 								
 								<!--Books in progress
 									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
 									<li><a href="archive-reviews/usher.html">The Fall of the House of Usher</li>
 									<li><a href="archive-reviews/nevertell.html">We'll Never Tell</li>
-										
+									<li><a href="archive-reviews/lefthimdead.html">Find Him Where You Left Him Dead</li>
+									<li><a href="archive-reviews/songbirds.html">The Ballad of Songbirds and Snakes</li>
 								-->
 							</ul>
 						</div>
