Elatsoe review & archive link
Added review to Elatsoe & moved the archive link out of the comment and into the main list

--- a/Archive.html
+++ b/Archive.html
@@ -62,6 +62,7 @@
 								<li><a href="archive-reviews/caraval.html">Caraval</li>
 								<li><a href="main-reviews/2-cemetery.html">Cemetery Boys</a></li>
 								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
+								<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
 								<li><a href="main-reviews/9-girl.html">The Girl Who Fell Beneath the Sea</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
@@ -83,10 +84,7 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
 								<li><a href="archive-reviews/notsupposedtodie.html">You're Not Supposed to Die Tonight</li>
-							<!--Hidden no review 
-								<li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>
-								<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
-								-->
+							<!--Hidden no review <li><a href="archive-reviews/whatmovesdead.html">What Moves the Dead</li>-->
 								
 								<!--Books in progress
 									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
