--- a/archive-reviews/elatsoe.html
+++ b/archive-reviews/elatsoe.html
@@ -62,7 +62,7 @@
 
                             <section class="review">
                                 <h2 class="elatsoe">Review</h2>
-                                <p class="elatsoe">INSERT REVEIW HERE!</p>
+                                <p class="elatsoe">Elatsoe was such a fun paranormal mystery! I loved all the world-building we got to see, from Ellie’s powers and stories of Six-Great, to the vampires, or rather Cursed, and the fae-folk who are integrated into society. Ellie’s friendship with Jay was so wholesome, and it is a friendship because Ellie is confirmed ace (plus I interpreted her as aroace) and that’s just as accepted and normalized as magic and ghosts. Speaking of, Ellie has a ghost dog! Kirby was so cute and I absolutely adore any book with an animal companion. Even though this novel touched on some more serious topics like the racism Ellie faces regularly, grief of a family member, violent murder, and small-town conspiracies, it’s still a very light-hearted fantasy. Despite the ages, it does read on the younger end of young adult, like early high school or maybe even middle grade, but I still enjoyed it regardless. I’ve seen a lot of comparisons to Scooby Doo which feels pretty accurate to me.  </p>
                             
                             </section>
 
