--- a/archive-reviews/deliciousmonsters.html
+++ b/archive-reviews/deliciousmonsters.html
@@ -68,7 +68,8 @@
 
                             <details class="content warning">
                                 <summary class="content warning">Content Warnings</summary>
-                                <p>Mentions or depictions of:<br>child abuse, body horror, death, sexual assault, pedophilia, animal death</p>
+                                <p>From the Author Note:</br>
+									"childhood sexual assault (off page, some details discussed), childhood physical abuse (corporal punishment, off page, described), childhood physical abuse (confinedment, punishment), childhood neglect, gaslighting, gromming, suicide (off page, mention), killing of a goat (off page, described), discussions of fatphobia, body horror/gore, violence, death" - Liselle Sambury, <em>Delicious Monsters</em></p>
                             </details>
 						</div>
 					</div>
