--- a/archive-reviews/deliciousmonsters.html
+++ b/archive-reviews/deliciousmonsters.html
@@ -60,6 +60,14 @@
 							    <p> YA, Horror, Thriller, Paranormal, Mystery </p>
                             </section>
 
+							<section class="snippet-2">
+								<p>“Your life matters, you know that right? It's not worth nothing just because you don't know what to do with it yet.” – Liselle Sambury, <em>Delicious Monsters</em></p>
+							</section>
+							
+							<section class="snippet-2">
+								<p>"You can spend years messing up, but just ahead of you, you have an entire lifetime to make it better, or to try at least." - Liselle Sambury, <em>Delicious Monsters</em></p>
+							</section>
+
                             <section class="review">
                                 <h2 class="deliciousmonsters">Review</h2>
                                 <p class="deliciousmonsters">INSERT REVIEW HERE</p>
