--- a/archive-reviews/feed.html
+++ b/archive-reviews/feed.html
@@ -60,6 +60,10 @@
 							    <p> YA, Horror, Fantasy, Thriller</p>
                             </section>
 
+							<section class="snippet-2">
+								<p>"To those who find freedom in becoming a monster when denied the space to be human" - Jamison Shea</p>
+							</section>
+
                             <section class="review">
                                 <h2 class="feed">Full Review</h2>
                                 <p class="feed">INSERT REVIEW HERE</p>
