--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -60,7 +60,7 @@
                             </section>
 
 							<section class="snippet-2">
-								<p>“Girls go missing all the time. And ignorance is bliss. I didn’t want this story because I was afraid. I was afraid of what I wouldn’t find and I was afraid of what I would. I still am.” – Courtney Summer, <em>Sadie</em></p>
+								<p>“Girls go missing all the time. And ignorance is bliss. I didn’t want this story because I was afraid. I was afraid of what I wouldn’t find and I was afraid of what I would. I still am.” – Courtney Summer</p>
 							</section>
 									
 
