--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -60,7 +60,7 @@
                             </section>
 
 							<section class="snippet">
-                           		<p>“He might not love me, but maybe he’ll praise my bones after he’s burned them too”<br>–Skyla Arndt, <em>Together We Rot</em></p>
+                           		<p>“He might not love me, but maybe he’ll praise my bones after he’s burned them too”<br>–Skyla Arndt</p>
 							</section>
 									
 								   <section class="review">
