--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -59,6 +59,10 @@
 								<p> Adult, horror, paranormal, mystery/thriller, retelling </p>
                             </section>
 
+							<section class="snippet-2">
+								<p>"To the youngest generations we've tasked wtih saving us all: You shouldn't have to. I'm so sorry." - Kiersten White</p>
+							</section>
+
                             <section class="review">
                             	<h2 class="hide">Review</h2>
                             	<p class="hide">Fourteen competitors have been chosen for the Olly Olly Oxen Free Hide and Seek Competition. The $50,000 cash prize could change their lives forever, and all they have to do is hide out in an abandoned amusement park for seven days without being found. Sounds good, right? Only no one offers any concrete information on the company sponsoring the competition, the townspeople regard them with disdain or fear, and no one knows who the seekers are or seen them without being eliminated. As the days progress, Mack begins to suspect something much more sinister is happening. She’s used to surviving, doing what’s only best for herself. But she’s grown to care for some of these people. Does Mack have what it takes to survive together, not alone?</p>
