--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -69,7 +69,7 @@
 									The fifth to serve<br/>
 									The sixth to lure<br/>
 									The seventh to consume<br/>
-									The last to wake” - Rin Chupeco, <em>The Sacrifice</em></p>
+									The last to wake” - Rin Chupeco</p>
 									
 							</section>
 							
