--- a/Archive.html
+++ b/Archive.html
@@ -63,7 +63,8 @@
 								<li><a href="main-reviews/2-cemetery.html">Cemetery Boys</a></li>
 								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
 								<li><a href="archive-reviews/elatsoe.html">Elatsoe</li>
-								<!--Hidden no review <li><a href="archive-reviews/feed.html">I Feed Her to the Beast and the Beast is Me</li>-->
+								<!--Hidden no review <li><a href="archive-reviews/feed.html">I Feed Her to the Beast and the Beast is Me</li>
+								<li><a href="archive-reviews/lefthimdead.html">Find Him Where You Left Him Dead</li>-->
 								<li><a href="main-reviews/9-girl.html">The Girl Who Fell Beneath the Sea</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
@@ -91,7 +92,6 @@
 									<li><a href="archive-reviews/nightmares.html">City of Nightmares</li>
 									<li><a href="archive-reviews/usher.html">The Fall of the House of Usher</li>
 									<li><a href="archive-reviews/nevertell.html">We'll Never Tell</li>
-									<li><a href="archive-reviews/lefthimdead.html">Find Him Where You Left Him Dead</li>
 								-->
 							</ul>
 						</div>
